# SVMT

./: .travis.yml  CMakeLists.txt  README.md  Util.cpp  Util.h  main.cpp
Qt/: SVMTGui.h  SVMTMainGui.cpp  SVMTMainGui.h  gui.ui
